2006-11-21  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb/brush.pdb (brush_get_pixels): the pixmap's size
	is width * height * bpp, not just width * height.

	* app/pdb/brush_cmds.c: regenerated.

2006-11-21  Simon Budig  <simon@gimp.org>

	* plug-ins/metadata/metadata.h: fixed typo spotted by John Marshall
	(bug #377811). Thanks for spotting this.

2006-11-21  Sven Neumann  <sven@gimp.org>

	* app/batch.c (batch_run_cmd): check argument types before
	assigning them. Allows to use a batch processor processor without
	a run-mode parameter.

2006-11-21  Sven Neumann  <sven@gimp.org>

	* etc/templaterc: applied patch from Michael Schumacher that
	replaces 'dpi' with the more correct 'ppi' (bug #376990).

2006-11-20  Michael Natterer  <mitch@gimp.org>

	* plug-ins/help/domain.[ch]
	* plug-ins/help/help.h: removed these files...

	* plug-ins/help/gimphelptypes.h
	* plug-ins/help/gimphelp.[ch]
	* plug-ins/help/gimphelpdomain.[ch]
	* plug-ins/help/gimphelpitem.[ch]
	* plug-ins/help/gimphelplocale.[ch]: ...completely chopped them
	and added a new private utility library. Soon to be used by the
	helpbrowser too.

	* plug-ins/help/Makefile.am
	* plug-ins/help/gimp-help-lookup.c
	* plug-ins/help/help.c: changed accordingly.

2006-11-20  Simon Budig  <simon@gimp.org>

	* app/vectors/gimpstroke.[ch]
	* tools/pdbgen/pdb/vectors.pdb
	* plug-ins/pygimp/pygimp-vectors.c: Applied patch from
	Joao S. O. Bueno Calligaris that adds some missing transformations
	to the PDB-API for strokes. Fixes bug #129598.

	* app/pdb/internal_procs.c
	* app/pdb/vectors_cmds.c
	* libgimp/gimpvectors_pdb.[ch]: regenerated.

2006-11-18  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scheme-wrapper.c (marshall_proc_db_call): Set
	return_val before destroying values[] as it may still be needed.

2006-11-18  Michael Natterer  <mitch@gimp.org>

	* etc/gtkrc: remove example about adding a help keybinding
	(bug #375952).

2006-11-18  Michael Natterer  <mitch@gimp.org>
