@@ -1,3 +1,8 @@
+2006-11-22  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/gimpchainbutton.c: code cleanup, seems to fix bug
+	#376668.
+
 2006-11-21  Michael Natterer  <mitch@gimp.org>
 
 	* tools/pdbgen/pdb/brush.pdb (brush_get_pixels): the pixmap's size
